--- a/app/src/main/res/layout-land/activity_second.xml
+++ b/app/src/main/res/layout-land/activity_second.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg8"
+    android:background="@drawable/bgCorona"
     tools:context=".SecondActivity">
 
     <Button
         android:id="@+id/btn_login2"
-        android:layout_width="151dp"
-        android:layout_height="26dp"
+        android:layout_width="203dp"
+        android:layout_height="38dp"
         android:background="@drawable/custom_button"
         android:gravity="center"
         android:lineSpacingExtra="18sp"
-        android:text="REGISTER"
+        android:text="CORONA REGISTER"
         android:textColor="#FFFFFF"
 
         android:textSize="20sp"
@@ -31,10 +31,10 @@
         style="@android:style/Widget.DeviceDefault.Light.AutoCompleteTextView"
         android:layout_width="214dp"
         android:layout_height="39dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/custom_shape"
         android:ems="10"
-        android:hint="username"
+        android:hint="Username"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:singleLine="false"
@@ -42,7 +42,7 @@
         android:textColor="#2E2D2D"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registration" />
 
@@ -54,7 +54,7 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/custom_shape"
         android:ems="10"
-        android:hint="fullname"
+        android:hint="Nama Lengkap"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:singleLine="false"
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
         android:text="Terms and Condition"
-        android:textColor="#D6AE1A"
+        android:textColor="#FF4500"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.016"
@@ -105,7 +105,7 @@
 
         android:layout_marginTop="11dp"
         android:drawableLeft="@drawable/ic_action_check"
-        android:text="Agree with"
+        android:text="I Agree To Corona"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.402"
@@ -121,7 +121,7 @@
         android:background="@drawable/custom_shape"
         android:drawableLeft="@drawable/ic_action_email"
         android:ems="10"
-        android:hint="email"
+        android:hint="Email Address"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:singleLine="false"
@@ -137,9 +137,9 @@
         android:id="@+id/registration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/ramabhadra"
-        android:text="REGISTRATION"
-        android:textColor="#F3A70F"
+        android:fontFamily="@font/titan_one"
+        android:text="CORONA REGISTER"
+        android:textColor="#FF0000"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
