--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg8"
+    android:background="@drawable/bgCoronaPort"
     tools:context=".SecondActivity">
 
     <Button
@@ -34,7 +34,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/custom_shape"
         android:ems="10"
-        android:hint="username"
+        android:hint="Username"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:singleLine="false"
@@ -53,7 +53,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/custom_shape"
         android:ems="10"
-        android:hint="fullname"
+        android:hint="Nama Lengkap"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:singleLine="false"
@@ -74,7 +74,7 @@
         android:background="@drawable/custom_shape"
         android:drawableLeft="@drawable/ic_action_email"
         android:ems="10"
-        android:hint="email"
+        android:hint="E-Mail Address"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:singleLine="false"
@@ -95,7 +95,7 @@
         android:drawableLeft="@drawable/ic_action_lock"
         android:drawableRight="@drawable/ic_action_see"
         android:ems="10"
-        android:hint="password"
+        android:hint="Password"
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textColor="#66AD27"
@@ -136,9 +136,9 @@
         android:id="@+id/registration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/ramabhadra"
-        android:text="REGISTRATION"
-        android:textColor="#F3A70F"
+        android:fontFamily="@font/titan_one"
+        android:text="CORONA REGISTER"
+        android:textColor="#FF0000"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/username"
