--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg3"
+    android:background="@drawable/bg10"
     tools:context=".MainActivity">
 
 
@@ -83,7 +83,7 @@
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="43dp"
         android:background="@drawable/custom_button"
         android:gravity="center"
@@ -108,8 +108,8 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:fontFamily="@font/ramabhadra"
-        android:text="SMAGRI"
-        android:textColor="#E4468510"
+        android:text="CORONA"
+        android:textColor="#F44000"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/view"
@@ -124,7 +124,7 @@
         android:layout_width="234dp"
         android:layout_height="44dp"
         android:layout_marginBottom="88dp"
-        android:text="fresh, cheap, and healhty"
+        android:text="Not Good, Evil, and Deadly"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +145,7 @@
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:singleLine="false"
-        android:text="user@smagri.com"
+        android:text="cv@cv19.com"
         android:textAlignment="center"
         android:textColor="#2E2D2D"
         android:textSize="22dp"
@@ -155,18 +155,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailtext"
         app:layout_constraintVertical_bias="0.0" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="154dp"
-        android:layout_height="110dp"
-        android:layout_marginBottom="416dp"
-        android:foregroundGravity="center_vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="@+id/view"
-        app:layout_constraintHorizontal_bias="0.52"
-        app:layout_constraintStart_toStartOf="@+id/view"
-        app:srcCompat="@drawable/smagri" />
 
     <TextView
         android:id="@+id/textView4"
